--- a/artpi.ioc
+++ b/artpi.ioc
@@ -5,83 +5,6 @@ CAD.provider=
 CORTEX_M7.CPU_DCache=Disabled
 CORTEX_M7.CPU_ICache=Disabled
 CORTEX_M7.IPParameters=CPU_ICache,CPU_DCache
-Dma.Request0=UART4_RX
-Dma.Request1=UART4_TX
-Dma.Request2=USART3_RX
-Dma.Request3=USART3_TX
-Dma.RequestsNb=4
-Dma.UART4_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.UART4_RX.0.EventEnable=DISABLE
-Dma.UART4_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.UART4_RX.0.Instance=DMA1_Stream0
-Dma.UART4_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.UART4_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.UART4_RX.0.Mode=DMA_NORMAL
-Dma.UART4_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.UART4_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.UART4_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.UART4_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.UART4_RX.0.RequestNumber=1
-Dma.UART4_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.UART4_RX.0.SignalID=NONE
-Dma.UART4_RX.0.SyncEnable=DISABLE
-Dma.UART4_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.UART4_RX.0.SyncRequestNumber=1
-Dma.UART4_RX.0.SyncSignalID=NONE
-Dma.UART4_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.UART4_TX.1.EventEnable=DISABLE
-Dma.UART4_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.UART4_TX.1.Instance=DMA1_Stream1
-Dma.UART4_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.UART4_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.UART4_TX.1.Mode=DMA_NORMAL
-Dma.UART4_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.UART4_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.UART4_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.UART4_TX.1.Priority=DMA_PRIORITY_LOW
-Dma.UART4_TX.1.RequestNumber=1
-Dma.UART4_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.UART4_TX.1.SignalID=NONE
-Dma.UART4_TX.1.SyncEnable=DISABLE
-Dma.UART4_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.UART4_TX.1.SyncRequestNumber=1
-Dma.UART4_TX.1.SyncSignalID=NONE
-Dma.USART3_RX.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART3_RX.2.EventEnable=DISABLE
-Dma.USART3_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART3_RX.2.Instance=DMA1_Stream2
-Dma.USART3_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART3_RX.2.MemInc=DMA_MINC_ENABLE
-Dma.USART3_RX.2.Mode=DMA_NORMAL
-Dma.USART3_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART3_RX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.USART3_RX.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.USART3_RX.2.Priority=DMA_PRIORITY_LOW
-Dma.USART3_RX.2.RequestNumber=1
-Dma.USART3_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.USART3_RX.2.SignalID=NONE
-Dma.USART3_RX.2.SyncEnable=DISABLE
-Dma.USART3_RX.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.USART3_RX.2.SyncRequestNumber=1
-Dma.USART3_RX.2.SyncSignalID=NONE
-Dma.USART3_TX.3.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART3_TX.3.EventEnable=DISABLE
-Dma.USART3_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART3_TX.3.Instance=DMA1_Stream3
-Dma.USART3_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART3_TX.3.MemInc=DMA_MINC_ENABLE
-Dma.USART3_TX.3.Mode=DMA_NORMAL
-Dma.USART3_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART3_TX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.USART3_TX.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.USART3_TX.3.Priority=DMA_PRIORITY_LOW
-Dma.USART3_TX.3.RequestNumber=1
-Dma.USART3_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.USART3_TX.3.SignalID=NONE
-Dma.USART3_TX.3.SyncEnable=DISABLE
-Dma.USART3_TX.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.USART3_TX.3.SyncRequestNumber=1
-Dma.USART3_TX.3.SyncSignalID=NONE
 ETH.IPParameters=MediaInterface
 ETH.MediaInterface=HAL_ETH_RMII_MODE
 FREERTOS.IPParameters=Tasks01,configUSE_POSIX_ERRNO
@@ -96,25 +19,24 @@ Mcu.CPN=STM32H750XBH6
 Mcu.Family=STM32H7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DEBUG
-Mcu.IP10=RCC
-Mcu.IP11=SDMMC1
-Mcu.IP12=SDMMC2
-Mcu.IP13=SPI1
-Mcu.IP14=SPI2
-Mcu.IP15=SPI4
-Mcu.IP16=SYS
-Mcu.IP17=UART4
-Mcu.IP18=USART3
-Mcu.IP19=USB_OTG_FS
-Mcu.IP2=DMA
-Mcu.IP3=ETH
-Mcu.IP4=FMC
-Mcu.IP5=FREERTOS
-Mcu.IP6=IWDG1
-Mcu.IP7=LTDC
-Mcu.IP8=MEMORYMAP
-Mcu.IP9=NVIC
-Mcu.IPNb=20
+Mcu.IP10=SDMMC1
+Mcu.IP11=SDMMC2
+Mcu.IP12=SPI1
+Mcu.IP13=SPI2
+Mcu.IP14=SPI4
+Mcu.IP15=SYS
+Mcu.IP16=UART4
+Mcu.IP17=USART3
+Mcu.IP18=USB_OTG_FS
+Mcu.IP2=ETH
+Mcu.IP3=FMC
+Mcu.IP4=FREERTOS
+Mcu.IP5=IWDG1
+Mcu.IP6=LTDC
+Mcu.IP7=MEMORYMAP
+Mcu.IP8=NVIC
+Mcu.IP9=RCC
+Mcu.IPNb=19
 Mcu.Name=STM32H750XBHx
 Mcu.Package=TFBGA240
 Mcu.Pin0=PB5
@@ -237,10 +159,6 @@ Mcu.UserName=STM32H750XBHx
 MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
-NVIC.DMA1_Stream1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
-NVIC.DMA1_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
-NVIC.DMA1_Stream3_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ETH_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -258,7 +176,7 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false\:true\:false
-NVIC.UART4_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true\:true
+NVIC.UART4_IRQn=true\:5\:0\:false\:false\:true\:false\:true\:true\:true
 NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0.Locked=true
@@ -675,7 +593,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ETH_Init-ETH-true-HAL-true,5-MX_FMC_Init-FMC-true-HAL-true,6-MX_LTDC_Init-LTDC-true-HAL-true,7-MX_SDMMC1_SD_Init-SDMMC1-true-HAL-true,8-MX_SDMMC2_SD_Init-SDMMC2-true-HAL-true,9-MX_SPI4_Init-SPI4-true-HAL-true,10-MX_UART4_Init-UART4-true-HAL-true,11-MX_SPI1_Init-SPI1-true-HAL-true,12-MX_USART3_UART_Init-USART3-true-HAL-true,13-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-true-HAL-true,14-MX_IWDG1_Init-IWDG1-true-HAL-true,15-MX_SPI2_Init-SPI2-true-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ETH_Init-ETH-true-HAL-true,4-MX_FMC_Init-FMC-true-HAL-true,5-MX_LTDC_Init-LTDC-true-HAL-true,6-MX_SDMMC1_SD_Init-SDMMC1-true-HAL-true,7-MX_SDMMC2_SD_Init-SDMMC2-true-HAL-true,8-MX_SPI4_Init-SPI4-true-HAL-true,9-MX_UART4_Init-UART4-true-HAL-true,10-MX_SPI1_Init-SPI1-true-HAL-true,11-MX_USART3_UART_Init-USART3-true-HAL-true,12-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-true-HAL-true,13-MX_IWDG1_Init-IWDG1-true-HAL-true,14-MX_SPI2_Init-SPI2-true-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=400000000
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
@@ -860,6 +778,10 @@ SPI4.Direction=SPI_DIRECTION_2LINES
 SPI4.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI4.Mode=SPI_MODE_MASTER
 SPI4.VirtualType=VM_MASTER
+UART4.FIFOMode=FIFOMODE_ENABLE
+UART4.IPParameters=FIFOMode,TXFIFOThreshold,RXFIFOThreshold
+UART4.RXFIFOThreshold=RXFIFO_THRESHOLD_HALFFULL
+UART4.TXFIFOThreshold=TXFIFO_THRESHOLD_HALFFULL
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
